<resources>
    <string name="app_name">EliteTask1</string>
    <string name="text_view">Text view</string>
    <string name="hello_world">hello_world</string>
    <string name="enter_text">Enter the text</string>
    <string name="Name">Name:</string>
    <string name="enter_the_text">Enter the text</string>
    <string name="submit">submit</string>
    <string name="spinner">Spinner</string>
    <string name="india">India</string>
    <string name="edit_text">Edit Text</string>
    <string name="button">Button</string>
    <string name="gridview">GridView</string>
    <string name="demo">Demo</string>
    <string name="toggle_amp_switch_button"><![CDATA[Toggle & Switch Button]]></string>
    <string name="checkbox_amp_switch_button"><![CDATA[Checkbox & Switch Button]]></string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="autocomplete">AutoComplete</string>
    <string name="countries">Countries</string>

</resources>
