<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/Name"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/enter_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/e2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:background="@drawable/roundeb"
        android:ems="10"
        android:hint="@string/enter_the_text"
        android:inputType="text" />

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:textSize="30sp" />

    <!--<com.rey.material.widget.EditText-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50sp"-->
    <!--android:layout_marginTop="300sp"-->
    <!--android:background="@drawable/blue"-->
    <!--app:et_helper="Enter the text"-->
    <!--app:et_inputId="@drawable/roundeb"-->
    <!--app:et_labelTextColor="#f0f0"-->
    <!--app:et_supportMaxChars="15" />-->
    <EditText
        android:id="@+id/edittext3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="Enter the phone number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edittext4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:ems="10"
        android:hint="Enter the phone Password"
        android:inputType="textPassword" />

    <com.poovam.pinedittextfield.SquarePinField
        android:id="@+id/squareField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:inputType="text"
        android:textSelectHandle="@drawable/text_handle"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:noOfFields="4" />

</RelativeLayout>